<resources>
    <string name="app_name">assignment</string>
    <string name="name">Name:</string>
    <string name="stclass">Class:</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="performance">Performance:</string>
    <string name="enter_blood_group">Enter Blood Group</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_class">Enter Class</string>
    <string name="enter_name">Enter Name</string>
    <string name="save">Save</string>
    <string name="std_rec">Students Record</string>
    <string name="add_st">Add Student</string>
    <string name="st_update">Update Student</string>
    <string name="no_record_found">No Record Found</string>
    <string name="add_background">Add Background</string>
</resources>