<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user" />

        <RelativeLayout
            android:id="@+id/ll_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_profile"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:textColor="@color/black"
                android:text="@string/name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_name_label"
                android:textColor="@color/black"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_class_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_name_label"
                android:text="@string/stclass"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_name"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_class_label"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_age_label"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_class_label"
                android:text="@string/age"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_class"
                android:textColor="@color/black"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_age_label"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_height_label"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_age_label"
                android:text="@string/height"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_age"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_height_label"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_bg_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_height_label"
                android:text="@string/blood_group"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_height"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_bg_label"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_performance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/tv_bg_label"
                android:text="@string/performance"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_performance"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_bg"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/tv_performance_label"
                android:maxLines="2"
                android:textSize="14sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>