<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:src="@drawable/ic_edit"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:hint="@string/stclass">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_class"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:hint="@string/age">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:hint="@string/height">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:hint="@string/blood_group">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/spn_performance"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/outline"
                        android:spinnerMode="dropdown"
                        tools:listitem="@layout/item_performance" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_background"
                        android:text="@string/save"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_user"
            app:layout_anchor="@id/view"
            app:layout_anchorGravity="center_horizontal|bottom" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_add"
            app:layout_anchor="@id/iv_profile"
            app:layout_anchorGravity="center_vertical|right" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>